; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/panc60/extr_panc60.c_backlight_init_ports.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/panc60/extr_panc60.c_backlight_init_ports.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D0 = common dso_local global i32 0, align 4
@D1 = common dso_local global i32 0, align 4
@D4 = common dso_local global i32 0, align 4
@D6 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @backlight_init_ports() #0 {
  %1 = load i32, i32* @D0, align 4
  %2 = call i32 @setPinOutput(i32 %1)
  %3 = load i32, i32* @D1, align 4
  %4 = call i32 @setPinOutput(i32 %3)
  %5 = load i32, i32* @D4, align 4
  %6 = call i32 @setPinOutput(i32 %5)
  %7 = load i32, i32* @D6, align 4
  %8 = call i32 @setPinOutput(i32 %7)
  %9 = load i32, i32* @D0, align 4
  %10 = call i32 @writePinLow(i32 %9)
  %11 = load i32, i32* @D1, align 4
  %12 = call i32 @writePinLow(i32 %11)
  %13 = load i32, i32* @D4, align 4
  %14 = call i32 @writePinLow(i32 %13)
  %15 = load i32, i32* @D6, align 4
  %16 = call i32 @writePinLow(i32 %15)
  ret void
}

declare dso_local i32 @setPinOutput(i32) #1

declare dso_local i32 @writePinLow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
